--- a/public/upload.html
+++ b/public/upload.html
@@ -63,7 +63,7 @@
   <div class="images">
   </div>
 </div>
-<script src="upload.js"></script>
+<script src="upload11.js"></script>
 <script>
   var doc = document
   var btn = doc.querySelector('.label')
